# trajopt

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml  test_imports.py  test_msl.py  test_refactoring.py
.github/workflows/: publish-pypi.yml
algorithm/: convergence.py  discretization.py  hyperparameters.py  scaling.py
docs/: conf.py  index.md  installation.md
docs/examples/: index.md
docs/theory/: scp.md
examples/car/: car.py  main.ipynb  method.yaml  mission.yaml  model.yaml
examples/cartpole/: cartpole.py  main.ipynb  method.yaml  mission.yaml  model.yaml
examples/ghame_entry_3dof/: config.yaml  main.ipynb  method.yaml  mission.yaml  model.yaml
examples/lander_6dof/: config.yaml  main.ipynb  main_methodvar.ipynb  main_standalone.ipynb  main_standalone_bak.ipynb  method.yaml  mission.yaml  standalone_prototype.ipynb  traj_3dof.npz  trajopt.yaml
examples/lander_6dof_dan/: custom.py  main_methodvar.ipynb  main_montecarlo.ipynb  main_mvmc.ipynb  main_standalone.ipynb  main_standalone_bak.ipynb  method.yaml  model.yaml  standalone_prototype.ipynb  trajopt.yaml
examples/models/: reentry_3dof.py  rotations.py
examples/msl_entry_3dof/: config.yaml  main.ipynb  main.py  main_standalone.ipynb  method.yaml  mission.yaml  model.yaml  trajopt.yaml  variations.yaml
examples/msrl_entry_3dof/: config.yaml
examples/msrl_entry_3dof_entry/: main.ipynb  main.py  method.yaml  mission.yaml
examples/multi_agent_quadrotor_3dof/: main_ps.ipynb  method.yaml
examples/parafoil_6dof/: custom.py  main.ipynb  main_mc.ipynb  method.yaml  mission.yaml  model.yaml
examples/perching_glider_tedrake/: main.ipynb  method.yaml  mission.yaml  model.yaml  perching_glider_tedrake.py
examples/quadrotor_3dof/: custom.py  main.ipynb  main_mc.ipynb  main_ps.ipynb  method.yaml  mission.yaml  model.yaml
examples/rlv_entry_3dof/: config.yaml  main.ipynb  method.yaml  mission.yaml
examples/rlv_entry_3dof_scp/: main.ipynb  method.yaml  mission.yaml
examples/starship_flip_malyuta/: config.yaml  main.ipynb  method.yaml  mission.yaml  model.yaml  starship.py
examples/vtol1_entry_3dof/: config.yaml  main.ipynb  main_methodvar.ipynb  main_mvmc.ipynb  main_standalone.ipynb  method.yaml  mission.yaml  model.yaml  plots_for_scitech26.py  trajopt.yaml
examples/vtol1_entry_3dof_dan/: custom_functions_dan.py  main_montecarlo.ipynb
examples/vtol2_entry_3dof/: main.ipynb  method.yaml  mission.yaml  model.yaml
missions/car/: config.yaml  main.ipynb  main.py  method.yaml
missions/cartpole/: cartpole.py  config.yaml  main.ipynb  method.yaml  model.yaml
missions/ghame_entry_3dof/: config.yaml  ghame.py  main.ipynb  main.py  method.yaml
missions/lander_6dof/: config.yaml  main.ipynb  main.py  method.yaml
missions/msl_entry_3dof/: config.yaml  main.ipynb  main.py  method.yaml  variations.yaml
missions/msrl_entry_3dof_entry/: config.yaml  main.ipynb  main.py  msrl.py
missions/perching_glider_tedrake/: config.yaml  main.ipynb  main.py  method.yaml  model.yaml  perching_glider_tedrake.py
missions/quadrotor_3dof/: PROTOTYPE_config.yaml  config.yaml  (+4 more)
models/: lander_6dof.py  quadrotor_3dof.py  reentry_3dof.py  reentry_6dof.py
(+459 files in other folders)
