[build-system]
requires = ["hatchling>=1.10"]
build-backend = "hatchling.build"

[project]
name = "trajopt"
version = "0.0.4"
description = "Trajectory optimization research and development framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Skye Mceowen", email = "skye@mceowen.io" }
]

# -------------------------------------------------------------------------
# Core dependencies: installed automatically via pip install .
# -------------------------------------------------------------------------
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "cvxpy>=1.4",
    "jax>=0.4",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "setuptools>=61.0",
    "sympy>=1.10, <= 2.0",
    "diffrax>=0.7.2",
    "qoco >=0.1.4,<0.2",
    "ecos >=2.0.12,<3.0",
    "piqp>=0.6.3,<0.7",
]

# Optional dependency groups (install via pip install .[dev])
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autoapi>=3.0",
    "myst-nb>=1.0",
    "furo",
]

[project.urls]
Homepage =      "https://github.com/mceowen/trajopt"
Repository =    "https://github.com/mceowen/trajopt"

# -------------------------------------------------------------------------
# scikit-build optional (if you use it for compiled C/C++ extensions)
# -------------------------------------------------------------------------
[tool.scikit-build]
install.components = ["python"]
wheel.install-dir = "trajopt"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
